Support paths longer than MAX_PATH

Prepend \\?\ to paths passed to FastFileInfo to enable paths that
have more than MAX_PATH characters.

Fixes: QTCREATORBUG-22848
Change-Id: I6c7caae226cc1a05e99a97564cf4d4187a074b45
Reviewed-by: Oliver Wolff <oliver.wolff@qt.io>